<resources>
    <string name="app_name">E-Commerce</string>
    <string name="welcome_back_to_route">Welcome Back To Route</string>
    <string name="please_sign_in_with_your_mail">Please sign in with your mail</string>
    <string name="user_name">User Name</string>
    <string name="enter_your_name">enter your username</string>
    <string name="password">Password</string>
    <string name="enter_your_password">enter your password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_full_name">enter your full name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_your_mobile">enter your mobile no</string>
    <string name="email">E-mail address</string>
    <string name="enter_your_email">enter your email address</string>
    <string name="signup">Sign up</string>
    <string name="route_logo">route_logo</string>
    <string name="create_account"> Create Account</string>

</resources>