<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.reham11203.e_commerce.activities.auth.fragments.login.LoginViewModel" />

        <import type="com.reham11203.e_commerce.activities.auth.fragments.login.LoginFragment"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.auth.fragments.login.LoginFragment"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:padding="24dp"
        android:orientation="vertical"
        android:weightSum="4">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/splash_icon"
            android:layout_weight="1"
            android:contentDescription="@string/route_logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/welcome_back_to_route"
                android:textColor="@color/white"
                android:layout_gravity="start"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/poppins_light"
                android:text="@string/please_sign_in_with_your_mail"
                android:textColor="@color/white"
                android:textSize="16sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/enter_your_name"
                android:layout_marginTop="8dp"
                style="@style/OutlinedEditText"
                app:endIconMode="clear_text"
                app:endIconTint="@color/darkGray"
                app:error="@{viewModel.emailErrorLiveData}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_user_name"
                    style="@style/InputText"
                    android:text="@={viewModel.emailLiveData}"
                    android:inputType="textPersonName|textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/enter_your_password"
                android:layout_marginTop="8dp"
                style="@style/OutlinedEditText"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/darkGray"
                app:error="@{viewModel.passwordErrorLiveData}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_password"
                    style="@style/InputText"
                    android:text="@={viewModel.passwordLiveData}"
                    android:inputType="textPassword"

                    />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/poppins"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_back"
                app:backgroundTint="@color/white"
                android:text="@string/login"
                android:textColor="@color/navy"
                android:fontFamily="@font/poppins_semibold"
                android:layout_marginTop="24dp"
                android:textSize="20sp"
                android:padding="8dp"
                android:onClick="@{() -> viewModel.login()}"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/no_account"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/tv_create_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/poppins"
                    android:padding="16dp"
                    android:text="@string/create_account"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>